--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "nodemon": "^3.1.1",
     "path": "^0.12.7",
     "socket.io": "^4.7.5",
+    "stripe": "^17.5.0",
     "ws": "^8.17.0"
   }
 }
