--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,8 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.5",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.4.0",
     "@tailwindcss/forms": "^0.5.9",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.2",
