--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,8 +55,10 @@
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
+    "react-slick": "^0.30.3",
     "recharts": "^2.12.7",
     "redux": "^5.0.1",
+    "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.5",
     "sweetalert2": "^11.12.0",
     "tailwind-merge": "^2.5.4",
